--- a/client/src/pages/ItemDetail.css
+++ b/client/src/pages/ItemDetail.css
@@ -54,7 +54,7 @@
   font-size: 1.05rem;
   color: var(--text-secondary, #555);
   line-height: 1.7;
-  text-align: justify;
+  text-align: left;
 }
 
 /* Brands Section */
